--- a/.prettierrc
+++ b/.prettierrc
@@ -1,4 +1,11 @@
 {
+  "semi": true,
   "singleQuote": true,
+  "tabWidth": 2,
+  "useTabs": false,
+  "printWidth": 100,
+  "endOfLine": "lf",
+  "arrowParens": "always",
+  "bracketSpacing": true,
   "trailingComma": "all"
 }
